fixed index view for games so that images do not overlap on desktop view with 3 games or more

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,10 @@ body a:hover {
     padding-left: 250px;
     padding-right: 250px;
   }
+
+  .game-padding {
+    padding-bottom: 270px;
+  }
  }
 
 .footer {
